--- a/src/main/scala/hk/edu/polyu/datamining/pamap2/ui/MonitorApplication.fxml
+++ b/src/main/scala/hk/edu/polyu/datamining/pamap2/ui/MonitorApplication.fxml
@@ -61,9 +61,21 @@
                         <TitledPane animated="false" text="import file">
                             <content>
                                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                                    <children>
-                                        <Button layoutX="277.0" layoutY="14.0" mnemonicParsing="false" onAction="#select_import_file" text="Select File" />
-                                    </children>
+                           <children>
+                              <GridPane hgap="7.0" layoutX="176.0" layoutY="54.0" vgap="7.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                <columnConstraints>
+                                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                </columnConstraints>
+                                <rowConstraints>
+                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                </rowConstraints>
+                                 <children>
+                                    <Button mnemonicParsing="false" onAction="#select_testing_datafile" text="Testing Data" GridPane.halignment="CENTER" />
+                                    <Button mnemonicParsing="false" onAction="#select_training_datafile" text="Training Data" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
+                                 </children>
+                              </GridPane>
+                           </children>
                                 </AnchorPane>
                             </content>
                         </TitledPane>
@@ -71,21 +83,29 @@
                             <content>
                                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                            <children>
-                              <ToggleButton layoutX="190.0" layoutY="14.0" mnemonicParsing="false" text="auto" />
-                              <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" text="extract from raw data" />
-                              <Label layoutX="265.0" layoutY="19.0" text="Current Status : " />
-                              <TableView fx:id="association_rule_mining_process_table" layoutX="14.0" layoutY="40.0" prefHeight="200.0" prefWidth="604.0">
-                                <columns>
-                                  <TableColumn fx:id="association_rule_mining_process_table_process" prefWidth="130.0" text="Process" />
-                                  <TableColumn fx:id="association_rule_mining_process_table_auto" prefWidth="102.0" text="Auto" />
-                                </columns>
-                              </TableView>
-                              <ButtonBar layoutX="400.0" layoutY="7.0" prefHeight="40.0" prefWidth="200.0">
-                                <buttons>
-                                    <RadioButton mnemonicParsing="false" text="on" />
-                                    <RadioButton mnemonicParsing="false" text="off" />
-                                </buttons>
-                              </ButtonBar>
+                              <GridPane hgap="7.0" layoutX="344.0" layoutY="47.0" vgap="7.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                <columnConstraints>
+                                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                </columnConstraints>
+                                <rowConstraints>
+                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                </rowConstraints>
+                                 <children>
+                                    <Label text="Min. Support" GridPane.columnSpan="2147483647" GridPane.halignment="CENTER" />
+                                    <Label text="Start" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
+                                    <Label text="End" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
+                                    <Label text="Step" GridPane.halignment="CENTER" GridPane.rowIndex="3" />
+                                    <TextField fx:id="min_support_start" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                    <TextField fx:id="min_support_end" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                                    <TextField fx:id="min_support_start_step" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                                    <Button mnemonicParsing="false" onAction="#start_association_rule_mining" text="Start" GridPane.columnSpan="2147483647" GridPane.halignment="CENTER" GridPane.rowIndex="4" />
+                                 </children>
+                              </GridPane>
                            </children></AnchorPane>
                             </content>
                         </TitledPane>
