--- a/src/main/scala/hk/edu/polyu/datamining/pamap2/ui/MonitorApplication.fxml
+++ b/src/main/scala/hk/edu/polyu/datamining/pamap2/ui/MonitorApplication.fxml
@@ -62,7 +62,7 @@
                             <content>
                                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                            <children>
-                              <GridPane hgap="7.0" layoutX="176.0" layoutY="54.0" vgap="7.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                              <GridPane hgap="7.0" layoutX="176.0" layoutY="54.0" vgap="7.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                 <columnConstraints>
                                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                                 </columnConstraints>
@@ -71,12 +71,14 @@
                                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                 </rowConstraints>
                                  <children>
                                     <Button mnemonicParsing="false" onAction="#select_testing_datafile" text="Testing Data" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
                                     <Button mnemonicParsing="false" onAction="#select_training_datafile" text="Training Data" GridPane.halignment="CENTER" />
                                     <ProgressBar fx:id="import_file_progress" prefWidth="600.0" progress="0.0" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER" />
-                                    <Label fx:id="number_of_file" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
+                                    <Label fx:id="file_progress_text" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
+                                    <Button mnemonicParsing="false" onAction="#abort_import_datafile" text="Abort" GridPane.halignment="CENTER" GridPane.rowIndex="4" />
                                  </children>
                               </GridPane>
                            </children>
