--- a/src/main/scala/hk/edu/polyu/datamining/pamap2/ui/NodesDetail.fxml
+++ b/src/main/scala/hk/edu/polyu/datamining/pamap2/ui/NodesDetail.fxml
@@ -5,7 +5,8 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
-<GridPane xmlns:fx="http://javafx.com/fxml/1" hgap="14.0" maxHeight="+Infinity" maxWidth="+Infinity" minHeight="-Infinity" minWidth="-Infinity"
+<GridPane xmlns:fx="http://javafx.com/fxml/1" hgap="14.0" maxHeight="+Infinity" maxWidth="+Infinity"
+          minHeight="-Infinity" minWidth="-Infinity"
           vgap="20.0" xmlns="http://javafx.com/javafx/8.0.65"
           fx:controller="hk.edu.polyu.datamining.pamap2.ui.NodesDetailController">
     <children>
