--- a/src/main/scala/hk/edu/polyu/datamining/pamap2/ui/MonitorApplication.fxml
+++ b/src/main/scala/hk/edu/polyu/datamining/pamap2/ui/MonitorApplication.fxml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
-<VBox xmlns:fx="http://javafx.com/fxml/1" prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/8.0.65"
-      fx:controller="hk.edu.polyu.datamining.pamap2.ui.MonitorController">
+
+<VBox xmlns:fx="http://javafx.com/fxml/1" prefHeight="400.0" prefWidth="640.0"
+      xmlns="http://javafx.com/javafx/8.0.76-ea" fx:controller="hk.edu.polyu.datamining.pamap2.ui.MonitorController">
     <children>
         <MenuBar VBox.vgrow="NEVER">
             <menus>
@@ -137,6 +141,38 @@
                                 </AnchorPane>
                             </content>
                         </TitledPane>
+                        <TitledPane animated="false" text="Data Set">
+                            <content>
+                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                    <children>
+                                        <GridPane AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
+                                                  AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                            <columnConstraints>
+                                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+                                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+                                            </columnConstraints>
+                                            <rowConstraints>
+                                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                                            </rowConstraints>
+                                            <children>
+                                                <Label text="Training Data"/>
+                                                <Label fx:id="training_data_count" text="click refresh to load"
+                                                       GridPane.columnIndex="1"/>
+                                                <Label text="Testing Data" GridPane.rowIndex="1"/>
+                                                <Label fx:id="testing_data_count" text="click refresh to load"
+                                                       GridPane.columnIndex="1" GridPane.rowIndex="1"/>
+                                                <Button mnemonicParsing="false" onAction="#refresh_dataset_count"
+                                                        text="Refresh" GridPane.rowIndex="2"/>
+                                                <ProgressIndicator fx:id="refresh_dataset_count_progress" progress="1.0"
+                                                                   GridPane.columnIndex="1" GridPane.rowIndex="2"/>
+                                            </children>
+                                        </GridPane>
+                                    </children>
+                                </AnchorPane>
+                            </content>
+                        </TitledPane>
                         <TitledPane animated="false" text="Association Rule Mining">
                             <content>
                                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
@@ -187,13 +223,6 @@
             </children>
         </AnchorPane>
         <BorderPane>
-            <left>
-                <Label fx:id="left_status" text="ready" BorderPane.alignment="CENTER">
-                    <BorderPane.margin>
-                        <Insets bottom="7.0" left="7.0" right="7.0" top="7.0"/>
-                    </BorderPane.margin>
-                </Label>
-            </left>
             <right>
                 <Button fx:id="cluster_status" mnemonicParsing="false" onAction="#update_cluster_info"
                         text="Cluster Status" BorderPane.alignment="CENTER">
@@ -202,6 +231,9 @@
                     </BorderPane.margin>
                 </Button>
             </right>
+            <left>
+                <Label fx:id="left_status" text="ready" BorderPane.alignment="CENTER"/>
+            </left>
         </BorderPane>
     </children>
 </VBox>
