--- a/src/main/scala/hk/edu/polyu/datamining/pamap2/ui/MonitorApplication.fxml
+++ b/src/main/scala/hk/edu/polyu/datamining/pamap2/ui/MonitorApplication.fxml
@@ -1,13 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
-
 <VBox xmlns:fx="http://javafx.com/fxml/1" prefHeight="400.0" prefWidth="640.0"
       xmlns="http://javafx.com/javafx/8.0.76-ea" fx:controller="hk.edu.polyu.datamining.pamap2.ui.MonitorController">
     <children>
@@ -240,7 +236,11 @@
                 </Button>
             </right>
             <left>
-                <Label fx:id="left_status" text="ready" BorderPane.alignment="CENTER"/>
+                <Label fx:id="left_status" text="ready" BorderPane.alignment="CENTER">
+                    <BorderPane.margin>
+                        <Insets bottom="7.0" left="7.0" right="7.0" top="7.0"/>
+                    </BorderPane.margin>
+                </Label>
             </left>
         </BorderPane>
     </children>
