--- a/src/main/scala/hk/edu/polyu/datamining/pamap2/ui/NodesDetail.fxml
+++ b/src/main/scala/hk/edu/polyu/datamining/pamap2/ui/NodesDetail.fxml
@@ -1,23 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.ImageView?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
 <GridPane xmlns:fx="http://javafx.com/fxml/1" hgap="14.0" maxHeight="+Infinity" maxWidth="+Infinity"
           minHeight="-Infinity" minWidth="-Infinity"
-          vgap="20.0" xmlns="http://javafx.com/javafx/8.0.65"
+          vgap="20.0" xmlns="http://javafx.com/javafx/8.0.76-ea"
           fx:controller="hk.edu.polyu.datamining.pamap2.ui.NodesDetailController">
     <children>
-        <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="0"
-                   GridPane.halignment="CENTER" GridPane.rowIndex="0" GridPane.valignment="TOP">
-            <image>
-                <!-- place holder -->
-            </image>
-        </ImageView>
         <VBox fx:id="main_vbox" maxHeight="+Infinity" maxWidth="+Infinity" minHeight="-Infinity" prefWidth="400.0"
-              spacing="7.0" GridPane.columnIndex="1" GridPane.rowIndex="0">
+              spacing="7.0" GridPane.rowIndex="0">
             <children>
                 <Label fx:id="messageLabel" text="number of host" textAlignment="LEFT" wrapText="true">
                     <font>
@@ -31,43 +25,18 @@
                 </Label>
             </children>
         </VBox>
-        <HBox maxHeight="-Infinity" maxWidth="+Infinity" minHeight="-Infinity" minWidth="-Infinity"
-              GridPane.columnIndex="1" GridPane.rowIndex="1">
+        <HBox alignment="BOTTOM_RIGHT" maxHeight="-Infinity" maxWidth="+Infinity" minHeight="-Infinity"
+              minWidth="-Infinity" GridPane.rowIndex="1">
             <children>
-                <HBox fx:id="actionParent" alignment="CENTER">
-                    <children>
-                        <Button fx:id="actionButton" mnemonicParsing="false" text="Action" HBox.hgrow="NEVER">
-                            <HBox.margin>
-                                <Insets right="14.0"/>
-                            </HBox.margin>
-                        </Button>
-                    </children>
+                <Button minWidth="80.0" mnemonicParsing="false" onAction="#close_window" text="Ok" HBox.hgrow="NEVER">
                     <HBox.margin>
-                        <Insets/>
-                    </HBox.margin>
-                </HBox>
-                <Pane maxWidth="+Infinity" HBox.hgrow="ALWAYS"/>
-                <Button fx:id="cancelButton" cancelButton="true" minWidth="80.0" mnemonicParsing="false" text="Cancel"
-                        HBox.hgrow="NEVER">
-                    <HBox.margin>
-                        <Insets/>
+                        <Insets left="14.0"/>
                     </HBox.margin>
                 </Button>
-                <HBox fx:id="okParent" alignment="CENTER">
-                    <children>
-                        <Button fx:id="okButton" minWidth="80.0" mnemonicParsing="false" onAction="#close_window"
-                                text="Ok" HBox.hgrow="NEVER">
-                            <HBox.margin>
-                                <Insets left="14.0"/>
-                            </HBox.margin>
-                        </Button>
-                    </children>
-                </HBox>
             </children>
         </HBox>
     </children>
     <columnConstraints>
-        <ColumnConstraints hgrow="NEVER" maxWidth="-Infinity" minWidth="-Infinity"/>
         <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" maxWidth="+Infinity" minWidth="-Infinity"/>
     </columnConstraints>
     <padding>
